force-app/main/default/objects/External_Verification_Register__c/External_Verification_Register__c.object-meta.xml
<CustomObject>
    <description>Created by Pulkit : To give a track to External SOA verification Auditors access to register a Booking&apos;s SOA verification</description>
    <label>External Verification Register</label>
    <nameField>
        <displayFormat>EVR-{0}</displayFormat>
        <label>External Verification Register Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Verification Registers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>