force-app/main/default/objects/External_Verification_Register__c/fields/AR_Actioned_on_Audit_Observations__c.field-meta.xml
<CustomField>
    <fullName>AR_Actioned_on_Audit_Observations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR Actioned on Audit Observations</label>
    <type>Checkbox</type>
</CustomField>