force-app/main/default/objects/External_Verification_Register__c/fields/AR_Verification_Time__c.field-meta.xml
<CustomField>
    <fullName>AR_Verification_Time__c</fullName>
    <label>AR Verification Time</label>
    <type>Time</type>
</CustomField>