force-app/main/default/objects/External_Verification_Register__c/fields/AR_Verifying_User__c.field-meta.xml
<CustomField>
    <fullName>AR_Verifying_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR Verifying User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>External_Verification_Registers2</relationshipName>
    <type>Lookup</type>
</CustomField>