force-app/main/default/objects/External_Verification_Register__c/fields/Audit_Observations_Others__c.field-meta.xml
<CustomField>
    <fullName>Audit_Observations_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If audit&apos;s observations are for anyone other than Accounts</description>
    <label>Audit Observations - Others</label>
    <type>Checkbox</type>
</CustomField>