force-app/main/default/objects/External_Verification_Register__c/fields/Audit_Verified__c.field-meta.xml
<CustomField>
    <fullName>Audit_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Confirmed?</label>
    <type>Checkbox</type>
</CustomField>