force-app/main/default/objects/External_Verification_Register__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <formula>TEXT(Booking__r.Status__c)</formula>
    <label>Booking Status</label>
    <type>Text</type>
</CustomField>