force-app/main/default/objects/External_Verification_Register__c/fields/Rectification_Completed__c.field-meta.xml
<CustomField>
    <fullName>Rectification_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by External Verifiers</inlineHelpText>
    <label>Rectification Completed</label>
    <type>Checkbox</type>
</CustomField>