force-app/main/default/objects/External_Verification_Register__c/fields/Rectification_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Rectification_Completed_Date__c</fullName>
    <label>Rectification Completed Date</label>
    <type>Date</type>
</CustomField>