force-app/main/default/objects/External_Verification_Register__c/fields/Submitted_to_Audit__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted to Audit</label>
    <type>Checkbox</type>
</CustomField>