force-app/main/default/objects/External_Verification_Register__c/fields/Title_Deed_Completed__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Completed__c</fullName>
    <description>Used as a filtering out condition in the EVR report</description>
    <formula>ISPICKVAL(Booking__r.Title_Transfer_Completed__c, &apos;Completed&apos;)</formula>
    <inlineHelpText>If parent Booking&apos;s Title Transfer is Completed or not</inlineHelpText>
    <label>Title Deed Completed</label>
    <type>Checkbox</type>
</CustomField>