force-app/main/default/objects/External_Verification_Register__c/fields/Tower_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Tower_Completion_Date__c</fullName>
    <formula>DATETIMEVALUE(Booking__r.Unit__r.Tower__r.Date_of_Completion__c)</formula>
    <label>Tower Completion Date</label>
    <type>DateTime</type>
</CustomField>