force-app/main/default/objects/External_Verification_Register__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <formula>Booking__r.Unit__r.Tower__r.Name</formula>
    <label>Tower Name</label>
    <type>Text</type>
</CustomField>