force-app/main/default/objects/External_Verification_Register__c/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <formula>Booking__r.Unit__r.Name</formula>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>