force-app/main/default/objects/External_Verification_Register__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <label>SOA Verification Date</label>
    <type>Date</type>
</CustomField>