force-app/main/default/objects/External_Verification_Register__c/fields/Verification_Time__c.field-meta.xml
<CustomField>
    <fullName>Verification_Time__c</fullName>
    <label>SOA Verification Time</label>
    <type>Time</type>
</CustomField>