force-app/main/default/objects/External_Verification_Register__c/fields/Verifiers_Comment__c.field-meta.xml
<CustomField>
    <fullName>Verifiers_Comment__c</fullName>
    <label>Verifier&apos;s Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>