force-app/main/default/objects/External_Verification_Register__c/fields/Verifying_User__c.field-meta.xml
<CustomField>
    <fullName>Verifying_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOA Verifying User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>External_Verification_Registers</relationshipName>
    <type>Lookup</type>
</CustomField>